LicheePi Zero 2 support: -full support for features provided in both linux kernel and u-boot. -kernel has various features commonly modularised as built-in. -u-boot updated to 2021.10. -u-boot has support for booting from spi nand flash.
Signed-off-by: Robert <robert@axium.co.nz>

--- a/package/boot/uboot-sunxi/Makefile
+++ b/package/boot/uboot-sunxi/Makefile
@@ -9,9 +9,9 @@
 include $(TOPDIR)/rules.mk
 include $(INCLUDE_DIR)/kernel.mk
 
-PKG_VERSION:=2020.04
+PKG_VERSION:=2021.10
 
-PKG_HASH:=fe732aaf037d9cc3c0909bad8362af366ae964bbdac6913a34081ff4ad565372
+PKG_HASH:=cde723e19262e646f2670d25e5ec4b1b368490de950d4e26275a988c36df0bd4
 
 PKG_MAINTAINER:=Zoltan HERPAI <wigyori@uid0.hu>
 
@@ -22,7 +22,7 @@ define U-Boot/Default
   BUILD_TARGET:=sunxi
   UBOOT_IMAGE:=u-boot-sunxi-with-spl.bin
   UENV:=default
-  HIDDEN:=1
+  HIDDEN:=
 endef
 
 define U-Boot/a64-olinuxino
@@ -334,6 +334,18 @@ define U-Boot/bananapi_m2_berry
   BUILD_DEVICES:=sinovoip_bananapi-m2-berry
 endef
 
+define U-Boot/LicheePi_Zero
+  BUILD_SUBTARGET:=cortexa7
+  NAME:=LicheePi Zero
+  BUILD_DEVICES:=licheepi-zero
+endef
+
+define U-Boot/LicheePi_Zero_SPINAND
+  BUILD_SUBTARGET:=cortexa7v3sspinand
+  NAME:=LicheePi Zero (SPI-NAND)
+  BUILD_DEVICES:=licheepi-zero-spinand
+endef
+
 UBOOT_TARGETS := \
 	a64-olinuxino \
 	a64-olinuxino-emmc \
@@ -380,7 +392,9 @@ UBOOT_TARGETS := \
 	pine64_plus \
 	sopine_baseboard \
 	orangepi_zero_plus \
-	libretech_all_h3_cc_h5
+	libretech_all_h3_cc_h5 \
+	LicheePi_Zero \
+	LicheePi_Zero_SPINAND
 
 UBOOT_CONFIGURE_VARS += USE_PRIVATE_LIBGCC=yes
 
